--- a/style.css
+++ b/style.css
@@ -298,6 +298,10 @@ html {
         font-size: 20px;
     }
 
+    .sakura-logo {
+        padding-left: 32px;
+    }
+
     .hero-text h1 {
         font-size: 72px;
     }
@@ -353,6 +357,7 @@ html {
     .sakura-logo {
         width: 40px;
         height: 40px;
+        padding-left: 24px;
     }
 
     .nav-container a {
@@ -428,6 +433,10 @@ html {
 
     .footer-logo {
         padding-left: 24px;
+    }
+
+    .social-logos {
+        padding-right: 24px;
     }
 
 
